fix style/refact. code

--- a/src/components/TextArea/index.module.scss
+++ b/src/components/TextArea/index.module.scss
@@ -11,6 +11,10 @@
 	justify-content: center;
 }
 
+.textarea {
+	padding: 15px;
+}
+
 .info {
 	color: #ff0000;
 }
@@ -40,4 +44,3 @@
 .btnExport:hover {
 	background: #2469ae;
 }
-
